[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.3.0"
http-body-util = "0.1.0-rc.2"
hyper = { version = "0.14", features = ["full"] }
io = "0.0.2"
tokio = { version = "1", features = ["full"] }
